2014-03-16  Kaz Kylheku  <kaz@kylheku.com>

	Version 86

	* txr.c (version): Bumped.

	* txr.1: Bumped version, set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated

	* dep.mk: Regenerated.

2014-03-16  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (win_make_cmdline): I think I cracked the code of
	passing escaped arguments to Microsoft's popen and system
	functions. The first argument cannot be quoted, but the
	subsequent ones can. It is the quoting of the first argument
	that causes the whole thing to be quoted. So we just
	avoid quoting the first argument. (If it has spaces, too bad;
	don't do that).
	(open_process): Fix neglected optional argument handling
	in Windows version of this function.

2014-03-16  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Detect _wspawn* functions.

	* stream.c (run): Implement using _wspawnvp on MinGW.

2014-03-15  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Bugfix. When handling a backslash-newline continuation
	in the SPECIAL, NESTED and BRACED states, do not pop the state in all
	three, only in SPECIAL (to terminate the @\ continuation).

	* txr.1: Eliminate wrong claim that string literals do not split across lines,
	which is directly contradicted two paragraphs later.  Document that
	quasiliterals also split.

	* genvim.txr (txr_regex, txl_regex): These definitions change from "syn match"
	to "syn region" so that the backslash-newline continuation can be properly
	handled.
	(txr_string, txr_quasilit): Correctly handle split literals.

	* txr.vim: Regenerated.

2014-03-15  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (text): Allow the EMPTY token (the @(empty) syntax)
	to be a text.

	* txr.1: Documented @(empty).

2014-03-14  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (regex_parse, lisp_parse): Fix neglected handling of
	optional arguments. This problem can cause the symbol : to be
	planted as the std_error stream, resulting in an error loop
	that blows the stack.

	* regex.c (regex_compile): Likewise.
